0.9.1 (devel):
  fix AICctab bug
  remove spurious cat/print in profile

0.9.0 26/08/2008
*  fix Tom Hobbs bug: named lower/upper/parscale/ndeps
get rearranged properly, otherwise rearrange in order
of "start" and issue a warning
* documentation tweak for S4 as.data.frame
* added sbeta to list of known distributions
* removed nlme requirement & auto-loading

0.8.9 04/08/2008
* version bump, submit to CRAN
* added predict method

0.8.8  10/07/2008
* added flexibility for profile plotting (main, x labels etc.);
    added examples
* added an instance of "namedrop" to fix naming problem
* added tol.newmin to slice etc.
* added check for numeric return from profile within confint
* fixed bugs in profile plotting when profile is restricted
   to a subset of variables
* added tests for par() to reset to original on exit
* improved profile documentation
* replicate std.err if specified in profile
* add as.data.frame 
* tweak tol.newmin (better fit found during profile) code

0.8.7  12/05/2008
* version bump, moved to R-forge.
* reordered NEWS file (most recent first)
     
0.8.6.1 22/03/2008:
   tweaked stop-on-better-fit code
   fixed (?) qAIC(c) methods

   26/03/2008:
   tweak/fix to ICtab documentation (thanks to Tom Hobbs)

0.8.6 added qAIC(c) methods (not working yet!)

0.8.5.1 oops. Fixed infelicity (bug?) in new 
  environment manipulation

0.8.5 tweaked environment/data assignment to preserve
    original minuslogl environment better

0.8.4 changed  plot.profile.mle2 options (added onepage etc.,
   made plot.confstr=TRUE by default)

0.8.3 added warning about too-short lower/upper 
      added documentation

0.8.2 fixed bug in AICctab
      cosmetic change to printing -- save call.orig
      moved ChangeLog to NEWS

0.8.1 fixed (?) environment bug
      tried to use built-in relist, but failed: renamed relist
	  to "relist2" (try again later)
      documented get.mnames (auxiliary function for ICtabs)
      started to add gr (gradient) capability -- NOT TESTED
