@@ -1,22 +1,33 @@
 BUGS/ISSUES:
 
-spurious warnings in 1-parameter conf int:
+* proper initialization of intercept-less parameter()
+    entries
 
-library(bbmle)
-m1 <- mle2(10~dbinom(prob=p,size=15),start=list(p=0.67))
-c1 <- confint(m1)
+* plot methods/fortify, a la ggplot2?
 
-  issues when hitting new minimum in confint rather than
+* add deviance() method [need S3-to-S4 conversion]
+
+* make sure subset arg is really working!
+
+* spurious error on mismatched parameter names
+
+* spurious warnings in 1-parameter conf int:
+
+   library(bbmle)
+   m1 <- mle2(10~dbinom(prob=p,size=15),start=list(p=0.67))
+   c1 <- confint(m1)
+
+* issues when hitting new minimum in confint rather than
 profile; should return unevaluated call too in this case
 
-  use numDeriv library hessian() function instead of nlme::fdHess?
+* use numDeriv library hessian() function instead of nlme::fdHess?
 (or use nlme::fdHess to avoid loading whole package?)
 
-  turn off Hessian calculation for profile fits??
+* turn off Hessian calculation for profile fits??
 
-  should print warning immediately if convergence fails
+* should print warning immediately if convergence fails
 
-  some weird stuff with returned fit from found-better-fit profile --
+* some weird stuff with returned fit from found-better-fit profile --
 treating profiled value as fixed ...
 
 BUG:   order of parameters matters for L-BFGS-B
@@ -49,11 +60,21 @@ start as FUNCTION (i.e., self-start)
 analytic derivatives
 relist
 subset
-predict (feasible for formula arguments
-          if we know the MEAN of the relevant distribution?)
 plot.predict
 drop1, add1, etc.
 link functions ("identity","log", "logit", etc.)
+delta method standard error calcs
+tranformations on LHS of formula (i.e. use
+  link rather than inverse-link function?  only
+  possible if link is known and invertible:
+
+   inverse 
+   log
+   logit  (qlogis)
+   probit (qnorm)
+
+  etc.
+
 clean up/argue about data handling: closures etc. etc. etc...
 
 document argument handling:
